<?xml version="1.0"?>
<package>
  <name>robotnik_gyro</name>
  <version>0.0.0</version>
  <description>
	   The robotnik_gyro package reads the Yaw from the Robotnik Gyro Board in the summit xl robot series (XL, XL-Omni and X-WAM).
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="inf@robotnik.es">Robotnik</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>  
 
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
